# frobo_rsd

./: .gitignore  email_account.txt  fmMake.txt  ip setup.txt  map.pgm  send_email_with_ip.py  send_tweet_with_ip.py
MR_BridgeWallTracking/: CMakeLists.txt  package.xml
MR_BridgeWallTracking/launch/: frobit_run_wpt_nav.launch
MR_BridgeWallTracking/src/: bridge_wall_tracking.cpp  covariance_node.cpp
MR_Button/: CMakeLists.txt  package.xml
MR_Button/launch/: button.launch
MR_Button/src/: buttonNode.cpp
MR_Camera/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
MR_Camera/launch/: camera.launch
MR_Camera/src/: cameraNode.cpp
MR_CameraFalse/src/: mr_camera_false_node.cpp
MR_CameraNavigation/: CMakeLists.txt  package.xml
MR_CameraNavigation/src/: cameraNavigationNode.cpp
MR_CameraProcessing/: CMakeLists.txt  package.xml
MR_CameraProcessing/src/: cameraProcessingNode.cpp
MR_DeadManPriority/: CMakeLists.txt  setup.py
MR_DeadManPriority/src/: deadmanpriority.py
MR_ExtendedKalmanFilter/: CMakeLists.txt  MR_ExtendedKalmanFilter.launch  package.xml
MR_ExtendedKalmanFilter/include/MR_ExtendedKalmanFilter/: odom_estimation_node.h
MR_ExtendedKalmanFilter/src/: odom_estimation_node.cpp
MR_FreeNavigationSetup/: 24HTest.rviz  CMakeLists.txt  package.xml
MR_FreeNavigationSetup/maps/: boxSimTestMap.yaml  box_and_surroundings.yaml  entire_map.yaml  frontal_map_big_edited.yaml  frontal_map_big_edited_rc.yaml  frontal_map_big_sim.pgm  frontal_map_big_sim.yaml  map2.yaml
MR_FreeNavigationSetup/move_base_config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
MR_FreeNavigationSetup/move_base_config_old/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_config.rviz
MR_FrobitInterface/: CMakeLists.txt  package.xml  setup.py
MR_FrobitInterface/src/: frobit_interface_node.py
MR_GPS/: CMakeLists.txt  package.xml
MR_GPS/launch/: gps.launch
MR_GPS/src/: Client.py  GPSLocalisationNode.cpp  GPSNode.cpp
MR_Go/: CMakeLists.txt  package.xml
MR_Go/launch/: go.launch
MR_Go/src/: goNode.cpp  mr_go_node.cpp
MR_Go/srv/: .srv  linearMove.srv  move.srv  right.srv
MR_HMI/: CMakeLists.txt  package.xml  protocol.txt  setup.py
MR_HMI/HMI/frobit_demo/launch/: frobit_actuator_interface.launch
MR_HMI/HMI/rospython/src/hmi_python_proxy/: package.xml
MR_HMI/HMI/rospython/src/hmi_python_proxy/scripts/: listener.py  proxy.py  talker2.py
MR_HMI/HMI/rsd/: index.html  stylesheet.css
MR_HMI/HMI/rsd/utils/: CommController.js  MainController.js
MR_HMI/launch/: hmi.launch  hmi_only.launch
MR_HMI/src/: hmiNode.py  proxy.py
MR_HMI/srv/: tip.srv
MR_HMIPythonProxy/: CMakeLists.txt  package.xml
MR_HMIPythonProxy/scripts/: proxy.py
MR_HMIServer/: README.md
MR_HMIServer/HMI/: README.md
MR_IncidentHandler/: CMakeLists.txt  package.xml  setup.py
MR_IncidentHandler/src/: incidentHandlerNode.py
MR_KalmanFilter/: CMakeLists.txt  package.xml
MR_LineFollower/: CMakeLists.txt  package.xml
MR_LineFollower/launch/: linefollower.launch
MR_LineFollower/src/: lineFollowerNode.cpp
MR_LineFollower/srv/: followUntilLidar.srv  followUntilQR.srv  followUntilRelative.srv
MR_Log/: CMakeLists.txt  package.xml
MR_Log/launch/: Log.launch
MR_Log/src/: logNode.cpp
MR_MESClient/: CMakeLists.txt  package.xml
MR_MESClient/launch/: mesclient.launch
MR_MESClient/src/: mesClientNode.cpp  tinyxml2.cpp  tinyxml2.h
MR_MESServer/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
MR_MESServer/src/: MESServerNode.cpp
MR_Main/: CMakeLists.txt  package.xml
MR_Main/launch/: main.launch
MR_Main/src/: mainNode.cpp
MR_Main/srv/: run.srv
MR_MissionPlanner/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
MR_MissionPlanner/launch/: missionplanner.launch
MR_MissionPlanner/src/: missionPlannerNode.cpp
MR_NavigationController/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
MR_NavigationController/launch/: navigationcontroller.launch
MR_NavigationController/src/: graph.cpp  graph.h  navigationControllerNode.cpp  node.cpp  node.h  skills.cpp  skills.h  vertex.cpp  vertex.h
MR_NavigationController/srv/: followLineToQR.srv  move.srv  performAction.srv  setCurrentNode.srv
MR_ObstacleDetector/: CMakeLists.txt  README.md  README.md~  fmMake.txt  package.xml  setup.py
MR_ObstacleDetector/launch/: obstacle_detector.launch
MR_ObstacleDetector/src/: obstacle_detector.py
MR_ObstacleDetector/srv/: enabler.srv
MR_PythonExample/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
MR_PythonExample/src/: main.py
MR_QR/: CMakeLists.txt  CMakeLists.txt~  ReadMe.txt  package.xml  package.xml~
MR_QR/src/: qrNode.cpp
MR_TFBroadcaster/: package.xml
MR_TFBroadcaster/launch/: tfbroadcaster.launch
MR_TFBroadcaster/src/: tfbroadcaster.cpp
MR_TipController/: CMakeLists.txt  package.xml
MR_TipController/launch/: tipcontroller.launch
MR_TipController/res/: Tipper.ino  tipper.ino
MR_TipController/src/: tipControllerNode.cpp
Navigation_Setup/Laser_filter/: laser_config.yaml
Navigation_Setup/maps/: boxSimTest.world  entire_map.pgm  entire_map.yaml  frontal_map_big.pgm
Old/MR_BridgeWallTracking/: README.md  (+1 more)
Old/MR_NavigationController/: CMakeLists.txt  package.xml
Old/MR_NavigationController/src/: navigationControllerNode.cpp
Old/MR_TFBroadcaster/: CMakeLists.txt
Other files/: frontal_map_big.yaml  map2.pgm  map_lidar_front.pgm  map_lidar_front.yaml
launch/: amcl.launch  bridgeDemonstration.launch  dominik_freeNavigation.launch  freeNavigation.launch  freeNavigationSim.launch  frobit_run_wpt_nav.launch~  frobit_serial.launch  gmap.launch  gps.launch  hmi_listener.launch  hmi_proxy.launch  imu.launch  lidar.launch  lineFollower.launch  missionplanner.launch  mobileRobot.launch  mrGo.launch  navigationController.launch  navigationcontroller.launch  obstacle_detector.launch  qr_code_tester.launch  test.launch  tipcontroller.launch
twist_to_twist_stamped/: CMakeLists.txt  package.xml
(+425 files in other folders)
