<?xml version="1.0"?>
<package>
  <name>mr_frobit_interface</name>
  <version>0.0.0</version>
  <description>Ours!</description>
  <maintainer email="jorod14@sdu.dk">Kjeld Jensen</maintainer>
  <license>BSD 3-Clause</license>
  <url type="website">http://www.frobomind.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
