<?xml version="1.0"?>
<package>
  <name>lidar_obstacle_detector</name>
  <version>0.0.0</version>
  <description>The lidar_obstacle_detector package</description>

  <maintainer email="yoali11@student.sdu.dk">Yonas ALizadeh</maintainer>
  <url type="website">http://www.frobomind.org</url>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
